@@ -781,7 +781,7 @@ include_once 'include/page_header.php';
 	}
 	
 	$reset = true;
-	$options = array('only_current_node');
+	$options = array('only_current_node', 'not_proxy_hosts');
 	if($filter_enabled){
 		array_push($options,'allow_all');
 		$reset = false;
